fix z-index

--- a/grails-app/assets/stylesheets/app/layout.less
+++ b/grails-app/assets/stylesheets/app/layout.less
@@ -681,7 +681,7 @@ header {
       padding: 0;
     }
     .panel-heading {
-      z-index: 100;
+      z-index: 99;
     }
     table {
       tr.cloned > td, tr.cloned > th, tr.native-sticky > th, tr.native-sticky > td {
